# remesher-3d

./: CMakeLists.txt  README.md  main.cpp  remesher3d.cpp  remesher3d.h
sizing-fields/: edgelengthsizingfield.cpp  edgelengthsizingfield.h
